Project

General

Profile

Actions

Bug #16491

closed

rbd-mirror: 'wait_for_scheduled_deletion' callback might deadlock

Added by Jason Dillaman almost 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If there is a race and there is no scheduled deletion, it's possible for the callback to complete within the caller's thread context while still holding locks.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16511: jewel: rbd-mirror: 'wait_for_scheduled_deletion' callback might deadlockResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Loïc Dachary almost 8 years ago

  • Copied to Backport #16511: jewel: rbd-mirror: 'wait_for_scheduled_deletion' callback might deadlock added
Actions #4

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF