src/test/rbd_mirror/image_replay.cc
@@ -189,7 +189,8 @@ int main(int argc, const char **argv)
   threads = new rbd::mirror::Threads(reinterpret_cast<CephContext*>(
     local->cct()));
 
-  image_deleter.reset(new rbd::mirror::ImageDeleter(local, threads->timer,
+  image_deleter.reset(new rbd::mirror::ImageDeleter(local, threads->work_queue,
+                                                    threads->timer,
                                                     &threads->timer_lock));
 
   image_sync_throttler.reset(new rbd::mirror::ImageSyncThrottler<>());
