src/test/rbd_mirror/test_ImageReplayer.cc
@@ -107,9 +107,9 @@ public:
       m_local_ioctx.cct()));
 
     m_image_deleter.reset(new rbd::mirror::ImageDeleter(m_local_cluster,
-                                                      m_threads->timer,
-                                                      &m_threads->timer_lock));
-
+                                                        m_threads->work_queue,
+                                                        m_threads->timer,
+                                                        &m_threads->timer_lock));
     m_image_sync_throttler.reset(new rbd::mirror::ImageSyncThrottler<>());
   }
 
